--- a/Inmobiliaria/src/main/resources/templates/00-index.html
+++ b/Inmobiliaria/src/main/resources/templates/00-index.html
@@ -1,70 +1,68 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>index</title>
-    
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body style="margin: 30px;">
-    <header>
-      <div th:replace="fragments/navbar :: nav_bar"></div>
-      <br><br>
-      <div th:replace="fragments/buscador :: nav_buscador"></div>
-     
-    </header>
-    <br><br>
-  
-    <section style="background-color: rgb(158, 248, 170);">
-      <div class="container"><br>
-        <div class="row">
-          <div class="col">
-            <img src="img/casa5.jpg" class="img-fluid" alt="" />
-            <h3 style="text-align: center">esta es una casa</h3>
-            <p style="text-align: justify">
-              There are many variations of passages of Lorem Ipsum available,
-              but the majority have suffered alteration in some form, by
-              injected humour, or randomised words which don't look even
-              slightly
-            </p>
-          </div>
-          <div class="col">
-            <img src="img/casa3.png" class="img-fluid" alt="imagen rota" />
-            <h3 style="text-align: center">esta es una casa</h3>
-            <p style="text-align: justify">
-              There are many variations of passages of Lorem Ipsum available,
-              but the majority have suffered alteration in some form, by
-              injected humour, or randomised words which don't look even
-              slightly
-            </p>
-          </div>
-          <div class="col">
-            <img src="img/casa6.jpg" class="img-fluid" alt="imagen rota" />
-            <h3 style="text-align: center">esta es una casa</h3>
-            <p style="text-align: justify">
-              There are many variations of passages of Lorem Ipsum available,
-              but the majority have suffered alteration in some form, by
-              injected humour, or randomised words which don't look even
-              slightly
-            </p>
-          </div>
-        </div>
-      </div>
-      <br /><br />
-    </section>
-  
-    <hr />
 
-    <div th:replace="fragments/footer.html :: footer"></div>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>index</title>
 
-  <script src=""></script>
-  </body>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+</head>
+
+<body style="margin: 30px;">
+	<header>
+		<div th:replace="fragments/navbar :: nav_bar"></div>
+		<br><br>
+		<div th:replace="fragments/buscador :: nav_buscador"></div>
+
+	</header>
+	<br><br>
+
+	<section style="background-color: rgb(158, 248, 170);">
+		<div class="container"><br>
+			<div class="row">
+				<div class="col">
+					<img src="img/casa5.jpg" class="img-fluid" alt="" />
+					<h3 style="text-align: center">esta es una casa</h3>
+					<p style="text-align: justify">
+						There are many variations of passages of Lorem Ipsum available,
+						but the majority have suffered alteration in some form, by
+						injected humour, or randomised words which don't look even
+						slightly
+					</p>
+				</div>
+				<div class="col">
+					<img src="img/casa3.png" class="img-fluid" alt="imagen rota" />
+					<h3 style="text-align: center">esta es una casa</h3>
+					<p style="text-align: justify">
+						There are many variations of passages of Lorem Ipsum available,
+						but the majority have suffered alteration in some form, by
+						injected humour, or randomised words which don't look even
+						slightly
+					</p>
+				</div>
+				<div class="col">
+					<img src="img/casa6.jpg" class="img-fluid" alt="imagen rota" />
+					<h3 style="text-align: center">esta es una casa</h3>
+					<p style="text-align: justify">
+						There are many variations of passages of Lorem Ipsum available,
+						but the majority have suffered alteration in some form, by
+						injected humour, or randomised words which don't look even
+						slightly
+					</p>
+				</div>
+			</div>
+		</div>
+		<br /><br />
+	</section>
+
+	<hr />
+
+	<div th:replace="fragments/footer.html :: footer"></div>
+
+	<script src=""></script>
+</body>
+
 </html>
-
