--- a/Inmobiliaria/src/main/resources/templates/01-quienesSomos.html
+++ b/Inmobiliaria/src/main/resources/templates/01-quienesSomos.html
@@ -2,39 +2,46 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body style="margin: 30px;">
-        <header>
-		      <div th:replace="fragments/navbar.html :: nav_bar"></div>
-		      <div th:replace="fragments/buscador.html :: nav_buscador"></div>
-    </header><br>
-    <section>
-        <h1>
-            Quienes somos
-        </h1>
-        <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-        </p>
-    </section>
-    <div class="row">
-        <div class="col-md-6">
-           <h2> <a th:href="@{/usuario/registroP}" style="color: indianred;">¿Sos Propietario? registrate</a> </h2>   
-        </div>
-        <div class="col-md-6">
-            <h2> <a th:href="@{/usuario/registroI}" style="color: indianred;">¿Queres comprar o alquilar?</a>  </h2>
-        </div>
+	<header>
+		<div th:replace="fragments/navbar.html :: nav_bar"></div>
+		<div th:replace="fragments/buscador.html :: nav_buscador"></div>
+	</header><br>
+	<section>
+		<h1>
+			Quienes somos
+		</h1>
+		<p>
+			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+			industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+			scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+			electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+			Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+			Aldus PageMaker including versions of Lorem Ipsum.
+		</p>
+	</section>
+	<div class="row">
+		<div class="col-md-6">
+			<h2> <a th:href="@{/usuario/registroP}" style="color: indianred;">¿Sos Propietario? registrate</a> </h2>
+		</div>
+		<div class="col-md-6">
+			<h2> <a th:href="@{/usuario/registroI}" style="color: indianred;">¿Queres comprar o alquilar?</a> </h2>
+		</div>
 
-    </div>
-    <br><br><br><br><br><br><br>
-    <hr>
+	</div>
+	<br><br><br><br><br><br><br>
+	<hr>
 
-<div th:replace="fragments/footer.html :: footer"></div>
+	<div th:replace="fragments/footer.html :: footer"></div>
 
 </body>
+
 </html>
