--- a/Inmobiliaria/src/main/resources/templates/02A-registroUsuarioP.html
+++ b/Inmobiliaria/src/main/resources/templates/02A-registroUsuarioP.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Document</title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous" />
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Document</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </head>
 
 <body style="margin: 30px;">
 
-<header>
-     
-      <div th:replace="fragments/navbar :: nav_bar"></div>
-          
-    
-</header>
+	<header>
+
+		<div th:replace="fragments/navbar :: nav_bar"></div>
+
+
+	</header>
 
 	<p th:if="${error != null}" th:text="${error}" style="color:red;"></p>
-	
+
 	<br>
 	<h1>Registro de Usuario PROPIETARIO</h1>
 	<br>
@@ -33,40 +29,37 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col">
-					<label for="nombre">Nombre</label><br> <input type="text"
-						name="nombre" id="nombre" required>
-						<br>
+					<label for="nombre">Nombre</label><br> <input type="text" name="nombre" id="nombre" required>
+					<br>
 				</div>
 
 				<div class="col">
-					<label for="apellido">Apellido</label><br> <input type="text"
-						name="apellido" id="apellido" required><br>
+					<label for="apellido">Apellido</label><br> <input type="text" name="apellido" id="apellido"
+						required><br>
 				</div>
 				<div class="col"></div>
 			</div>
 			<div class="row">
 				<div class="col"></div>
 				<div class="col">
-					<label for="email">E-mail</label><br> <input type="email"
-						name="email" id="email" required><br>
+					<label for="email">E-mail</label><br> <input type="email" name="email" id="email" required><br>
 				</div>
 
 				<div class="col">
-					<label for="password">Password</label><br> <input
-						type="password" name="contrasenia" id="contrasenia" required><br>
+					<label for="password">Password</label><br> <input type="password" name="contrasenia"
+						id="contrasenia" required><br>
 				</div>
 				<div class="col"></div>
 			</div>
 			<div class="row">
 				<div class="col"></div>
 				<div class="col">
-					<label for="Dni">Dni</label><br> <input type="text"
-						name="dni" id="dni" required><br>
+					<label for="Dni">Dni</label><br> <input type="text" name="dni" id="dni" required><br>
 				</div>
 
 				<div class="col">
-					<label for="Direccion">Direccion</label><br> <input
-						type="text" name="direccion" id="direccion" required><br>
+					<label for="Direccion">Direccion</label><br> <input type="text" name="direccion" id="direccion"
+						required><br>
 				</div>
 				<div class="col"></div>
 			</div><br>
@@ -89,14 +82,13 @@
 			<div class="col-md-5">
 				<div class="row">
 					<div class="col" style="text-align-last: justify">
-						<a href="https://es-la.facebook.com/"> <img src="img/face.png"
-							alt="" style="width: 40px; height: auto" /></a> <a
-							href="https://www.instagram.com/?hl=es"><img
-							src="img/instagran.png" alt="" style="width: 40px; height: auto" /></a>
-						<a href="https://twitter.com/?lang=es"><img
-							src="img/twiter.png" alt="" style="width: 60px; height: auto" /></a>
-						<a href="https://www.tiktok.com/es//"><img
-							src="img/tiktok.jfif" alt="" style="width: 60px; height: auto" /></a>
+						<a href="https://es-la.facebook.com/"> <img src="img/face.png" alt=""
+								style="width: 40px; height: auto" /></a> <a href="https://www.instagram.com/?hl=es"><img
+								src="img/instagran.png" alt="" style="width: 40px; height: auto" /></a>
+						<a href="https://twitter.com/?lang=es"><img src="img/twiter.png" alt=""
+								style="width: 60px; height: auto" /></a>
+						<a href="https://www.tiktok.com/es//"><img src="img/tiktok.jfif" alt=""
+								style="width: 60px; height: auto" /></a>
 					</div>
 				</div>
 				<br />
@@ -110,17 +102,13 @@
 			<div class="col-md-1"></div>
 			<div class="col-md-6">
 				<form action="">
-					<input type="text" name="Nombre" placeholder="Ingrese su nombre"
-						id="nombre" /> <label for="email"></label> <input type="email"
-						placeholder="Ingrese su E-Mail" /><br /> <label
+					<input type="text" name="Nombre" placeholder="Ingrese su nombre" id="nombre" /> <label
+						for="email"></label> <input type="email" placeholder="Ingrese su E-Mail" /><br /> <label
 						for="comentarios"></label><br />
-					<textarea name="" id="comentarios"
-						placeholder=" Escribanos y nos contactaremos de inmediato "
+					<textarea name="" id="comentarios" placeholder=" Escribanos y nos contactaremos de inmediato "
 						class="commentA" style="width: 100%; min-height: 100px"></textarea>
 					<label for="Enviar"></label> <input type="submit" />
 				</form>
 			</div>
 		</div>
 	</footer>
-
-
