--- a/Inmobiliaria/src/main/resources/templates/05-propietario.html
+++ b/Inmobiliaria/src/main/resources/templates/05-propietario.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-	crossorigin="anonymous" />
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
 </head>
+
 <body style="margin: 30px;">
 	<header>
 		<div th:replace="fragments/navbar :: nav_bar"></div>
 	</header>
 	<section>
 		<h1 th:object="${propietario}">Bienvenido</h1>
-		<h2
-			th:value="${propietario.nombre}"></h2>  
-         
-    </section>
-    <div>
-    	<table class="table">
+		<h2 th:value="${propietario.nombre}"></h2>
+
+	</section>
+	<div>
+		<table class="table">
 			<thead>
 				<tr>
 					<th scope="col">zona</th>
@@ -50,22 +47,22 @@
 				</tr>
 
 			</tbody>
-			</table>
-			<div class="row">
-				<div class="col-md-8"></div>
-				<div class="col-md-4">
-					<a class="btn btn-primary" href="07-registroPropiedad.html"
-						role="button">Ingresar Nueva Propiedad</a>
-				</div>
-
-
+		</table>
+		<div class="row">
+			<div class="col-md-8"></div>
+			<div class="col-md-4">
+				<a class="btn btn-primary" href="07-registroPropiedad.html" role="button">Ingresar Nueva Propiedad</a>
 			</div>
 
 
+		</div>
 
-			</div>
-			<hr />
 
-			<div th:replace="footer"></div>
+
+	</div>
+	<hr />
+
+	<div th:replace="footer"></div>
 </body>
+
 </html>
